<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_header_height"
    android:clickable="true">

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        >

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/user_avatar_view"
            android:layout_width="@dimen/navigation_avatar_size"
            android:layout_height="@dimen/navigation_avatar_size"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ico_user_default"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/user_avatar_view"
            android:layout_marginLeft="@dimen/default_general_margin"
            android:layout_marginStart="@dimen/default_general_margin"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="@dimen/default_tiny_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_medium_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_tiny_margin"
                    android:layout_marginStart="@dimen/default_tiny_margin"
                    android:background="@drawable/white_border"
                    android:text="@string/login_level"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_tiny_margin"
                    android:layout_marginStart="@dimen/default_tiny_margin"
                    android:background="@drawable/round_white_bg"
                    android:text="@string/login_vip"
                    android:textColor="@color/nav_head_roung_text_background"/>

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</FrameLayout>
